Redimenciondo imagem de fundo.

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h1 {
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('/./image/plano-de-fundo.jpg');
+    background-image: url('/./image/composicao-de-padaria-plana-redimencionada.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
