Atualiza informações de receita, comentários e roda pé.

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
 
 
 h1 {
-  /* ... outros estilos ... */
+
   font-size: 2.5rem; /* Tamanho base */
 }
 
@@ -60,8 +60,8 @@ h1 {
   font-weight: 400;
   font-style: normal;
   margin-top: 150px;
-   -webkit-text-stroke: 2px #333; /* Para navegadores baseados no WebKit (Chrome, Safari) */
-   text-shadow: 2px #333;
+   -webkit-text-stroke: 2px #221145;
+   text-shadow: 2px #982c83;
 }
 
 
